--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -271,22 +271,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "source": [
+    "import sklearn\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split into training, validation, and tests\n",
-    "train_1, test_1 = train_test_split(dataset1)\n",
-    "print(train_1.shape)\n",
-    "print(test_1.shape)"
+    "X = dataset1.drop(['over-50K'], axis=1) # drop column about over or under-50K (salary)\n",
+    "Y = dataset1['over-50K']\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test  = train_test_split(X, Y, test_size=0.15, shuffle=True)\n",
+    "print(Y_train.shape, Y_test.shape)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(22621, 15)\n",
-      "(7541, 15)\n"
+      "(25637,) (4525,)\n"
      ]
     }
    ],
@@ -294,26 +296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "source": [
     "import category_encoders as ce\n",
     "\n",
     "# Convert discrete variables into multiple variables using one-hot encoding\n",
     "# Discrete columns: workclass, education, marital-status, occupation, relationship, sex, native-country\n",
     "encoder = ce.OneHotEncoder(cols=['workclass', 'education', 'marital-status', 'occupation', 'race', 'relationship'], use_cat_names=True)\n",
-    "train_encoded_1 = encoder.fit_transform(train_1)\n",
-    "test_encoded_1 = encoder.transform(test_1) "
+    "train_encoded_1 = encoder.fit_transform(X_train)\n",
+    "test_encoded_1 = encoder.transform(X_test) \n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/usr/local/lib/python3.9/site-packages/category_encoders/utils.py:21: FutureWarning: is_categorical is deprecated and will be removed in a future version.  Use is_categorical_dtype instead\n",
-      "  elif pd.api.types.is_categorical(cols):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
