Remove unused columns

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Preprocessing Dataset #1: Adults"
+    "# Preprocessing and visualization of Dataset #1: Adults"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "# 1. Load the datasets into Pandas dataframes\n",
     "names1=['age', 'workclass', 'fnlwgt', 'education', 'education-num', 'marital-status', 'occupation', 'relationship', 'race', 'sex', 'capital-gain', 'capital-loss', 'hours-per-week', 'native-country', 'over-50K']\n",
@@ -36,47 +36,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(32561, 15)\n",
-      "       age         workclass  fnlwgt   education  education-num  \\\n",
-      "0       39         State-gov   77516   Bachelors             13   \n",
-      "1       50  Self-emp-not-inc   83311   Bachelors             13   \n",
-      "2       38           Private  215646     HS-grad              9   \n",
-      "3       53           Private  234721        11th              7   \n",
-      "4       28           Private  338409   Bachelors             13   \n",
-      "...    ...               ...     ...         ...            ...   \n",
-      "32556   27           Private  257302  Assoc-acdm             12   \n",
-      "32557   40           Private  154374     HS-grad              9   \n",
-      "32558   58           Private  151910     HS-grad              9   \n",
-      "32559   22           Private  201490     HS-grad              9   \n",
-      "32560   52      Self-emp-inc  287927     HS-grad              9   \n",
-      "\n",
-      "           marital-status         occupation   relationship   race     sex  \\\n",
-      "0           Never-married       Adm-clerical  Not-in-family  White    Male   \n",
-      "1      Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
-      "2                Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
-      "3      Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
-      "4      Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
-      "...                   ...                ...            ...    ...     ...   \n",
-      "32556  Married-civ-spouse       Tech-support           Wife  White  Female   \n",
-      "32557  Married-civ-spouse  Machine-op-inspct        Husband  White    Male   \n",
-      "32558             Widowed       Adm-clerical      Unmarried  White  Female   \n",
-      "32559       Never-married       Adm-clerical      Own-child  White    Male   \n",
-      "32560  Married-civ-spouse    Exec-managerial           Wife  White  Female   \n",
-      "\n",
-      "       capital-gain  capital-loss  hours-per-week native-country over-50K  \n",
-      "0              2174             0              40  United-States    <=50K  \n",
-      "1                 0             0              13  United-States    <=50K  \n",
-      "2                 0             0              40  United-States    <=50K  \n",
-      "3                 0             0              40  United-States    <=50K  \n",
-      "4                 0             0              40           Cuba    <=50K  \n",
-      "...             ...           ...             ...            ...      ...  \n",
-      "32556             0             0              38  United-States    <=50K  \n",
-      "32557             0             0              40  United-States     >50K  \n",
-      "32558             0             0              40  United-States    <=50K  \n",
-      "32559             0             0              20  United-States    <=50K  \n",
-      "32560         15024             0              40  United-States     >50K  \n",
-      "\n",
-      "[32561 rows x 15 columns]\n"
+      "(32561, 15)\n"
      ]
     }
    ],
@@ -91,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
     "# Remove instances with missing/invalid data entries\n",
     "dataset1_train.dropna(axis=0, how='any', inplace=True)\n",
@@ -110,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "# Encode Over 50K as 1\n",
     "dataset1_train['over-50K'] = dataset1_train['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
@@ -123,24 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "print(dataset1_train['native-country'].describe()) "
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "count             30162\n",
-       "unique               41\n",
-       "top       United-States\n",
-       "freq              27504\n",
-       "Name: native-country, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "count             30162\n",
+      "unique               41\n",
+      "top       United-States\n",
+      "freq              27504\n",
+      "Name: native-country, dtype: object\n"
+     ]
     }
    ],
    "metadata": {}
@@ -154,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
     "# Encode US as 1 and non-US as 0\n",
     "dataset1_train['native-country'] = np.where(dataset1_train['native-country']=='United-States', 1, 0)"
@@ -163,16 +120,10 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Visualization"
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "source": [
+    "# Visualize race distribution\n",
     "plt.hist(dataset1_train['race'], histtype='bar')\n",
     "plt.title('Race')\n",
     "plt.show()"
@@ -197,6 +148,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
+    "# Visualize education distribution\n",
     "plt.hist(dataset1_train['education'], histtype='bar')\n",
     "plt.title('education')\n",
     "plt.show()"
@@ -219,18 +171,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "source": [
     "# Correlation\n",
-    "correlations = dataset1_train.corr(method ='pearson')"
+    "correlations = dataset1_train.corr(method=\"pearson\")"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                     age    fnlwgt  education-num       sex  capital-gain  \\\n",
+      "age             1.000000 -0.076511       0.043526  0.081993      0.080154   \n",
+      "fnlwgt         -0.076511  1.000000      -0.044992  0.025362      0.000422   \n",
+      "education-num   0.043526 -0.044992       1.000000  0.006157      0.124416   \n",
+      "sex             0.081993  0.025362       0.006157  1.000000      0.048814   \n",
+      "capital-gain    0.080154  0.000422       0.124416  0.048814      1.000000   \n",
+      "capital-loss    0.060165 -0.009750       0.079646  0.047011     -0.032229   \n",
+      "hours-per-week  0.101599 -0.022886       0.152522  0.231268      0.080432   \n",
+      "native-country  0.016259 -0.083390       0.127207 -0.003006      0.012375   \n",
+      "over-50K        0.241998 -0.008957       0.335286  0.216699      0.221196   \n",
+      "\n",
+      "                capital-loss  hours-per-week  native-country  over-50K  \n",
+      "age                 0.060165        0.101599        0.016259  0.241998  \n",
+      "fnlwgt             -0.009750       -0.022886       -0.083390 -0.008957  \n",
+      "education-num       0.079646        0.152522        0.127207  0.335286  \n",
+      "sex                 0.047011        0.231268       -0.003006  0.216699  \n",
+      "capital-gain       -0.032229        0.080432        0.012375  0.221196  \n",
+      "capital-loss        1.000000        0.052417        0.015119  0.150053  \n",
+      "hours-per-week      0.052417        1.000000        0.010673  0.229480  \n",
+      "native-country      0.015119        0.010673        1.000000  0.040204  \n",
+      "over-50K            0.150053        0.229480        0.040204  1.000000  \n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "From the above correlations, we can interpret that 'fnlgwt' and 'native-country' are not relevant to predicting the salary as their correlation is below 0.09."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "source": [
+    "# Remove uncorrelated columns\n",
+    "dataset1_train = dataset1_train.drop(columns=['fnlwgt', 'native-country'])\n",
+    "dataset1_test = dataset1_test.drop(columns=['fnlwgt', 'native-country'])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(30162, 13)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "source": [
+    "# Visualize age distribution\n",
     "dataset1_train.age.plot(kind='kde')\n",
     "plt.title('Age distribution')\n",
     "plt.show()"
@@ -247,26 +254,6 @@
      "metadata": {
       "needs_background": "light"
      }
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "source": [
-    "dataset1_train['age'].corr(dataset1_train['over-50K'])"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.2419981362661184"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 18
     }
    ],
    "metadata": {}
