--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -58,9 +58,11 @@
    "source": [
     "# Encode Over 50K as 1\n",
     "dataset1_train['over-50K'] = dataset1_train['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
+    "dataset1_test['over-50K'] = dataset1_test['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
     "\n",
     "# Encode Male as 1\n",
-    "dataset1_train['sex'] = dataset1_train['sex'].map({'Male': 1, 'Female': 0})"
+    "dataset1_train['sex'] = dataset1_train['sex'].map({'Male': 1, 'Female': 0})\n",
+    "dataset1_test['sex'] = dataset1_test['sex'].map({'Male': 1, 'Female': 0})"
    ],
    "outputs": [],
    "metadata": {}
@@ -87,30 +89,6 @@
    "source": [
     "# Encode US as 1 and non-US as 0\n",
     "dataset1_train['native-country'] = np.where(dataset1_train['native-country']=='United-States', 1, 0)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# Visualize race distribution\n",
-    "plt.hist(dataset1_train['race'], histtype='bar')\n",
-    "plt.title('Race')\n",
-    "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# Visualize education distribution\n",
-    "plt.hist(dataset1_train['education'], histtype='bar')\n",
-    "plt.title('education')\n",
-    "plt.show()"
    ],
    "outputs": [],
    "metadata": {}
@@ -150,7 +128,27 @@
     "# Visualize age distribution\n",
     "dataset1_train.age.plot(kind='kde')\n",
     "plt.title('Age distribution')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Visualize all numerical categories\n",
+    "dataset1_train.hist(figsize=(20, 14))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Visualize categorical data\n",
+    "dataset1_train['education'].value_counts()\n",
+    "pd.crosstab(dataset1_train['education-num'], columns=dataset1_train['education'])\n",
+    "print(dataset1_train.shape)\n",
+    "\n",
+    "# Remove education-num as it gives no more information than education\n",
+    "dataset1_train = dataset1_train.drop(columns='education-num')\n",
+    "dataset1_test = dataset1_test.drop(columns='education-num')\n",
+    "print(dataset1_train.shape)"
    ],
    "outputs": [],
    "metadata": {}
@@ -184,14 +182,13 @@
    "execution_count": null,
    "source": [
     "# Normalize\n",
-    "\n",
     "from sklearn import preprocessing\n",
     "\n",
     "# Normalize age data\n",
     "x = train_encoded_1.values\n",
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
     "x_scaled = min_max_scaler.fit_transform(x)\n",
-    "df = pd.DataFrame(x_scaled, columns=names_1_encoded)"
+    "normalized_dataset_1 = pd.DataFrame(x_scaled, columns=names_1_encoded)"
    ],
    "outputs": [],
    "metadata": {}
