--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -23,18 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "source": [
     "# 1. Load the datasets into Pandas dataframes\n",
     "names1=['age', 'workclass', 'fnlwgt', 'education', 'education-num', 'marital-status', 'occupation', 'relationship', 'race', 'sex', 'capital-gain', 'capital-loss', 'hours-per-week', 'native-country', 'over-50K']\n",
     "dataset1_train = pd.read_csv('adult_train.csv', index_col=False, names=names1, sep=',\\s', na_values=['?'], engine='python')\n",
     "dataset1_test = pd.read_csv('adult_test.csv', index_col=False, names=names1, sep=',\\s', na_values=['?', 'nan', '|1x3 Cross validator'], engine='python')\n",
     "\n",
-    "\n",
-    "# Split data\n",
-    "x_train, x_test, y_train, y_test = train_test_split(dataset1_train, dataset1_train['over-50K'], test_size=0.15, shuffle=True)\n",
-    "print(x_train.shape, x_test.shape)\n",
-    "print(y_train.shape, y_test.shape)\n",
     "print(dataset1_train.shape)"
    ],
    "outputs": [
@@ -42,8 +37,6 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(27676, 15) (4885, 15)\n",
-      "(27676,) (4885,)\n",
       "(32561, 15)\n"
      ]
     }
@@ -59,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "source": [
     "# Remove instances with missing/invalid data entries\n",
     "dataset1_train.dropna(axis=0, how='any', inplace=True)\n",
@@ -79,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "source": [
     "# Encode Over 50K as 1\n",
     "dataset1_train['over-50K'] = dataset1_train['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
@@ -94,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "source": [
     "print(dataset1_train['native-country'].describe()) "
    ],
@@ -122,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "source": [
     "# Encode US as 1 and non-US as 0\n",
     "dataset1_train['native-country'] = np.where(dataset1_train['native-country']=='United-States', 1, 0)\n",
@@ -133,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "source": [
     "# Correlation\n",
     "correlations = dataset1_train.corr(method=\"pearson\")"
@@ -150,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "source": [
     "# Remove uncorrelated columns\n",
     "dataset1_train = dataset1_train.drop(columns=['fnlwgt', 'native-country'])\n",
@@ -161,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "source": [
     "# Visualize age distribution\n",
     "dataset1_train.age.plot(kind='kde')\n",
@@ -199,7 +192,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 61
     },
     {
      "output_type": "display_data",
@@ -218,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "source": [
     "# Visualize categorical data\n",
     "dataset1_train['education'].value_counts()\n",
@@ -251,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "source": [
     "import category_encoders as ce\n",
     "\n",
@@ -277,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 75,
    "source": [
     "# Normalize\n",
     "from sklearn import preprocessing\n",
@@ -323,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "source": [
     "def cross_validate(n, n_folds=5):\n",
     "    #get the number of data samples in each split\n",
@@ -355,64 +348,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 141,
    "source": [
-    "(num_instances, num_features) = dataset1_train.shape\n",
+    "# Split the data\n",
+    "x, y = train_encoded_1.iloc[:,:-1].to_numpy(), train_encoded_1['over-50K'].to_numpy()\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.15, shuffle=True)\n",
+    "print(x_train.shape, x_test.shape)\n",
+    "print(y_train.shape, y_test.shape)\n",
     "\n",
-    "x_train = normalized_dataset_1.iloc[:,:-1]\n",
-    "y_train = normalized_dataset_1.iloc[:,-1:]\n",
-    "x_test =normalized_dataset_1_test.iloc[:,:-1]\n",
-    "y_test = normalized_dataset_1_test.iloc[:,-1:]\n",
-    "\n",
-    "#Data split\n",
-    "# n_test = num_instances // 5\n",
-    "# inds = np.random.permutation(num_instances)\n",
-    "# x_train, y_train = x[inds[n_test:]], y[inds[n_test:]]\n",
-    "# x_test, y_test = x[inds[:n_test]], y[inds[:n_test]]\n",
-    "# inds = np.random.permutation(num_instances)\n",
-    "# x_train = normalized_dataset_1.drop(['over-50K'], axis=1) # drop column about over or under-50K (salary)\n",
-    "# y_train = normalized_dataset_1['over-50K']\n",
-    "# x_test = normalized_dataset_1.drop(['over-50K'], axis=1) # drop column about over or under-50K (salary)\n",
-    "# y_test = normalized_dataset_1['over-50K']\n",
-    "\n",
-    "loss = lambda y, yh: np.mean((y-yh)**2)\n",
-    "\n",
-    "#Plot the mean square error for different K values stored in K_list\n",
-    "K_list = range(1,30)\n",
-    "err_train, err_test = [], []\n",
-    "for i, K in enumerate(K_list):\n",
-    "    model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
-    "    model = model.fit(x_train, y_train)\n",
-    "    err_test.append(loss(model.predict(x_test), y_test))\n",
-    "    err_train.append(loss(model.predict(x_train), y_train))\n",
-    "\n",
-    "plt.plot(K_list, err_test, '-', label='unseen')\n",
-    "plt.plot(K_list, err_train, '-', label='train')\n",
-    "plt.legend()\n",
-    "plt.xlabel('K (number of neighbours)')\n",
-    "plt.ylabel('mean squared error')\n",
-    "plt.show()"
+    "x_normalized, y_normalized = normalized_dataset_1.iloc[:,:-1].to_numpy(), normalized_dataset_1['over-50K'].to_numpy()\n",
+    "x_normalized_train, x_normalized_test, y_normalized_train, y_normalized_test = train_test_split(x_normalized, y_normalized, test_size=0.15, shuffle=True)\n",
+    "print(x_normalized_train.shape, x_normalized_test.shape)\n",
+    "print(y_normalized_train.shape, y_normalized_test.shape)\n"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/jx/y0pzll5x2hsc8kpymwzr1vz00000gr/T/ipykernel_48457/35843172.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mKNeighborsRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_neighbors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0merr_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m     \u001b[0merr_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/sklearn/neighbors/_regression.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    206\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    207\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 208\u001b[0;31m         \u001b[0mneigh_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneigh_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkneighbors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    209\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m         \u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_get_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneigh_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/sklearn/neighbors/_base.py\u001b[0m in \u001b[0;36mkneighbors\u001b[0;34m(self, X, n_neighbors, return_distance)\u001b[0m\n\u001b[1;32m    703\u001b[0m                 \u001b[0mkwds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meffective_metric_params_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    704\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 705\u001b[0;31m             chunked_results = list(pairwise_distances_chunked(\n\u001b[0m\u001b[1;32m    706\u001b[0m                 \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fit_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduce_func\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreduce_func\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    707\u001b[0m                 \u001b[0mmetric\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meffective_metric_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/sklearn/metrics/pairwise.py\u001b[0m in \u001b[0;36mpairwise_distances_chunked\u001b[0;34m(X, Y, reduce_func, metric, n_jobs, working_memory, **kwds)\u001b[0m\n\u001b[1;32m   1631\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mreduce_func\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1632\u001b[0m             \u001b[0mchunk_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD_chunk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1633\u001b[0;31m             \u001b[0mD_chunk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreduce_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD_chunk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1634\u001b[0m             \u001b[0m_check_chunk_size\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD_chunk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunk_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1635\u001b[0m         \u001b[0;32myield\u001b[0m \u001b[0mD_chunk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/sklearn/neighbors/_base.py\u001b[0m in \u001b[0;36m_kneighbors_reduce_func\u001b[0;34m(self, dist, start, n_neighbors, return_distance)\u001b[0m\n\u001b[1;32m    580\u001b[0m         \"\"\"\n\u001b[1;32m    581\u001b[0m         \u001b[0msample_range\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 582\u001b[0;31m         \u001b[0mneigh_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margpartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_neighbors\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    583\u001b[0m         \u001b[0mneigh_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneigh_ind\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0mn_neighbors\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    584\u001b[0m         \u001b[0;31m# argpartition doesn't guarantee sorted order, so we sort again\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36margpartition\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36margpartition\u001b[0;34m(a, kth, axis, kind, order)\u001b[0m\n\u001b[1;32m    837\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    838\u001b[0m     \"\"\"\n\u001b[0;32m--> 839\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_wrapfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'argpartition'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    840\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    841\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36m_wrapfunc\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mbound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0;31m# A TypeError occurs if the object does have such a method in its\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(25637, 60) (4525, 60)\n",
+      "(25637,) (4525,)\n",
+      "(25637, 60) (4525, 60)\n",
+      "(25637,) (4525,)\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "source": [
+    "# Note: This code is inspired from the sklearn tutorial\n",
+    "\n",
+    "n_neighbors = 1\n",
+    "knn_model = neighbors.KNeighborsClassifier(n_neighbors=n_neighbors) # Initialize model\n",
+    "knn_model.fit(x_train, y_train)\n",
+    "\n",
+    "# Predict\n",
+    "y_pred = knn_model.predict(x_train)\n",
+    "acc = np.mean(y_pred == y_train)\n",
+    "\n",
+    "print(f'{acc:.4f}') # Should be 100%"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.9707\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "source": [
+    "# Cross validation\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "knn_model = neighbors.KNeighborsClassifier(n_neighbors=1)\n",
+    "scores    = cross_val_score(knn_model, x_train, y_train, cv=30)\n",
+    "\n",
+    "print(f'averaged {scores.mean():.3f} ± {scores.std():.3f} over {scores.shape[0]} trials')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "averaged 0.812 ± 0.014 over 30 trials\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "source": [
+    "best_acc = 0\n",
+    "for data, tag in zip((x_train, x_normalized), ('unnormalized', 'normalized')):\n",
+    "\n",
+    "  for n_neighbors in np.arange(1,20):\n",
+    "\n",
+    "    knn_model = neighbors.KNeighborsClassifier(n_neighbors=n_neighbors)\n",
+    "    acc = cross_val_score(knn_model, data, y_train, cv=10).mean()\n",
+    "\n",
+    "    if acc > best_acc:\n",
+    "      best_cfg = (tag, n_neighbors)\n",
+    "      best_acc = acc\n",
+    "      best_model = knn_model\n",
+    "\n",
+    "print(f'best cross validation accuracy : {best_acc:.3f} found with config {best_cfg}')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# (num_instances, num_features) = x_train.shape\n",
+    "\n",
+    "# loss = lambda y, yh: np.mean((y-yh)**2)\n",
+    "\n",
+    "# #Plot the mean square error for different K values stored in K_list\n",
+    "# K_list = range(1,30)\n",
+    "# err_train, err_test = [], []\n",
+    "# for i, K in enumerate(K_list):\n",
+    "#     model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
+    "#     model = model.fit(x_train, y_train)\n",
+    "#     err_test.append(loss(model.predict(x_test), y_test))\n",
+    "#     err_train.append(loss(model.predict(x_train), y_train))\n",
+    "\n",
+    "# plt.plot(K_list, err_test, '-', label='unseen')\n",
+    "# plt.plot(K_list, err_train, '-', label='train')\n",
+    "# plt.legend()\n",
+    "# plt.xlabel('K (number of neighbours)')\n",
+    "# plt.ylabel('mean squared error')\n",
+    "# plt.show()"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
