Cross validatio KNN done

--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "source": [
     "# 1. Load the datasets into Pandas dataframes\n",
     "names1=['age', 'workclass', 'fnlwgt', 'education', 'education-num', 'marital-status', 'occupation', 'relationship', 'race', 'sex', 'capital-gain', 'capital-loss', 'hours-per-week', 'native-country', 'over-50K']\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "source": [
     "# Remove instances with missing/invalid data entries\n",
     "dataset1_train.dropna(axis=0, how='any', inplace=True)\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "source": [
     "# Encode Over 50K as 1\n",
     "dataset1_train['over-50K'] = dataset1_train['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "source": [
     "print(dataset1_train['native-country'].describe()) "
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "source": [
     "# Encode US as 1 and non-US as 0\n",
     "dataset1_train['native-country'] = np.where(dataset1_train['native-country']=='United-States', 1, 0)\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "source": [
     "# Correlation\n",
     "correlations = dataset1_train.corr(method=\"pearson\")"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "source": [
     "# Remove uncorrelated columns\n",
     "dataset1_train = dataset1_train.drop(columns=['fnlwgt', 'native-country'])\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "source": [
     "# Visualize age distribution\n",
     "dataset1_train.age.plot(kind='kde')\n",
@@ -192,7 +192,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 61
+     "execution_count": 9
     },
     {
      "output_type": "display_data",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "source": [
     "# Visualize categorical data\n",
     "dataset1_train['education'].value_counts()\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "source": [
     "import category_encoders as ce\n",
     "\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "source": [
     "# Normalize\n",
     "from sklearn import preprocessing\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "source": [
     "def cross_validate(n, n_folds=5):\n",
     "    #get the number of data samples in each split\n",
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 14,
    "source": [
     "# Split the data\n",
     "x, y = train_encoded_1.iloc[:,:-1].to_numpy(), train_encoded_1['over-50K'].to_numpy()\n",
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "source": [
     "# Note: This code is inspired from the sklearn tutorial\n",
     "\n",
@@ -396,7 +396,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.9707\n"
+      "0.9712\n"
      ]
     }
    ],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "source": [
     "# Cross validation\n",
     "\n",
@@ -419,7 +419,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "averaged 0.812 ± 0.014 over 30 trials\n"
+      "averaged 0.818 ± 0.010 over 30 trials\n"
      ]
     }
    ],
@@ -427,10 +427,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 18,
    "source": [
     "best_acc = 0\n",
-    "for data, tag in zip((x_train, x_normalized), ('unnormalized', 'normalized')):\n",
+    "for data, tag in zip((x_train, x_normalized_train), ('unnormalized', 'normalized')):\n",
     "\n",
     "  for n_neighbors in np.arange(1,20):\n",
     "\n",
@@ -444,7 +444,15 @@
     "\n",
     "print(f'best cross validation accuracy : {best_acc:.3f} found with config {best_cfg}')"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "best cross validation accuracy : 0.850 found with config ('unnormalized', 18)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
