tiny comment edit

--- a/dataset-2.ipynb
+++ b/dataset-2.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "## Clean the data\n",
     "\n",
-    "Data is complete, i.e., no missing cells\n",
+    "Data is complete, i.e., no missing cells.\n",
     "Attributes are undefined, therefore all will be kept and be given the same weight\n"
    ],
    "metadata": {}
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "source": [
     "# Normalize\n",
     "from sklearn import preprocessing\n",
@@ -128,9 +128,23 @@
     "x = dataset2.values\n",
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
     "x_scaled = min_max_scaler.fit_transform(x)\n",
-    "normalized_dataset_2 = pd.DataFrame(x_scaled, columns=names2)"
+    "normalized_dataset_2 = pd.DataFrame(x_scaled, columns=names2)\n",
+    "\n",
+    "normalized_dataset_2.hist(figsize=(20, 14))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/t8/_kxxkxnd5lqg2bn_xf69flb40000gn/T/ipykernel_23069/1539554475.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Normalize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Normalize age data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -146,7 +160,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.7",
+   "version": "3.8.5",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -158,7 +172,7 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.7 64-bit"
+   "display_name": "Python 3.8.5 64-bit"
   },
   "interpreter": {
    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
