added cross validation and KNN working model

--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -129,7 +129,8 @@
    "execution_count": 7,
    "source": [
     "# Correlation\n",
-    "correlations = dataset1_train.corr(method=\"pearson\")"
+    "correlations = dataset1_train.corr(method=\"pearson\")\n",
+    "print(correlations)"
    ],
    "outputs": [],
    "metadata": {}
