added new sections to complete for KNN, and made DT skeleton

--- a/dataset-2.ipynb
+++ b/dataset-2.ipynb
@@ -124,7 +124,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Split training data into training and validation, start with 9:1 ratio (90% traning, 10% validation)"
+    "### Split training data into training and validation, start with 9:1 ratio (90% traning, 10% validation)"
    ],
    "metadata": {}
   },
@@ -149,7 +149,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Cross validation method"
+    "### Cross validation method"
    ],
    "metadata": {}
   },
@@ -181,23 +181,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# KNN"
+    "### Setting up training/validation data sets and variables needed for hyperparameter analysis"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "source": [
-    "from sklearn import neighbors\n",
-    "\n",
     "(trn_instances, num_features) = dataset2_trn_full.shape\n",
-    "\n",
     "num_folds = 5\n",
-    "\n",
-    "K_list=range(1,100)\n",
-    "\n",
-    "err_train,err_valid = np.zeros(len(K_list)), np.zeros((len(K_list), num_folds))\n",
     "\n",
     "#split the data\n",
     "(n_val, x_val2,y_val2, x_train2, y_train2)=splitTraining(10,trn_instances)\n",
@@ -207,10 +200,37 @@
     "x_train2=x_train2.to_numpy()\n",
     "y_train2=y_train2.to_numpy()\n",
     "\n",
-    "\n",
     "#define a function for the MSE losss\n",
-    "loss = lambda y, yh: np.mean((y-yh)**2)\n",
+    "loss = lambda y, yh: np.mean((y-yh)**2)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# KNN"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating best number of K neighbors"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "source": [
+    "from sklearn import neighbors\n",
     "\n",
+    "K_list=range(1,100)\n",
+    "\n",
+    "err_train,err_valid = np.zeros(len(K_list)), np.zeros((len(K_list), num_folds))\n",
+    "\n",
+    "#Evaluating best number of K neighbors\n",
     "for i, K in enumerate(K_list):\n",
     "    #Find the validation errors for num_folds splits for a given K\n",
     "    model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
@@ -226,7 +246,7 @@
     "plt.legend()\n",
     "plt.xlabel('K (number of neighbours)')\n",
     "plt.ylabel('mean squared error')\n",
-    "plt.show()"
+    "plt.show()\n"
    ],
    "outputs": [
     {
@@ -245,10 +265,89 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating best distance to use (Euclidean or Manhattan)"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Verifying custom cross-validation results against cross-validation package"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "#add sklearn cross val method for verification purposes\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Decision Tree"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating best split criterion without max depth limitation"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "## TO BE CHANGED FOR DECISION TREE\n",
+    "for i, K in enumerate(K_list):\n",
+    "    #Find the validation errors for num_folds splits for a given K\n",
+    "    model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
+    "    model = model.fit(x_train2, y_train2)\n",
+    "    err_train[i]= loss(y_train2, model.predict(x_train2))\n",
+    "    for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
+    "        model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
+    "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
+    "        err_valid[i, f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
+    "   \n",
+    "plt.plot(K_list, err_train,  label='test')\n",
+    "plt.errorbar(K_list, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='validation')\n",
+    "plt.legend()\n",
+    "plt.xlabel('K (number of neighbours)')\n",
+    "plt.ylabel('mean squared error')\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating best max depth limitation with Gini index"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating best max depth limitation with Entropy "
+   ],
    "metadata": {}
   }
  ],
