--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -59,7 +59,7 @@
     "dataset1_test.dropna(axis=0, how='any', inplace=True)\n",
     "print(dataset1_train.shape)\n",
     "\n",
-    "# Encode Over 50K as 1\n",
+    "# Encode Over 20K as 1\n",
     "dataset1_train['over-50K'] = dataset1_train['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
     "dataset1_test['over-50K'] = dataset1_test['over-50K'].map({'>50K': 1, '<=50K': 0})\n",
     "\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "source": [
     "# Note: Inspired from cross validation code given in class\n",
     "\n",
@@ -280,24 +280,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "source": [
     "# Split the data\n",
     "x, y = train_encoded_1.iloc[:,:-1].to_numpy(), train_encoded_1['over-50K'].to_numpy()\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.15, shuffle=True)\n",
     "\n",
     "# Split further for testing purposes (growing samples)\n",
-    "data_75 = train_encoded_1.sample(frac=0.30)\n",
-    "x_75, y_75 = data_75.iloc[:,:-1].to_numpy(), data_75['over-50K'].to_numpy()\n",
-    "x_train_75, x_test_75, y_train_75, y_test_75 = train_test_split(x_75, y_75, test_size=0.15, shuffle=True)\n",
+    "data_30 = train_encoded_1.sample(frac=0.30)\n",
+    "x_30, y_30 = data_30.iloc[:,:-1].to_numpy(), data_30['over-50K'].to_numpy()\n",
+    "x_train_30, x_test_30, y_train_30, y_test_30 = train_test_split(x_30, y_30, test_size=0.15, shuffle=True)\n",
     "\n",
-    "data_50 = train_encoded_1.sample(frac=0.20)\n",
-    "x_50, y_50 = data_50.iloc[:,:-1].to_numpy(), data_50['over-50K'].to_numpy()\n",
-    "x_train_50, x_test_50, y_train_50, y_test_50 = train_test_split(x_50, y_50, test_size=0.15, shuffle=True)\n",
+    "data_20 = train_encoded_1.sample(frac=0.20)\n",
+    "x_20, y_20 = data_20.iloc[:,:-1].to_numpy(), data_20['over-50K'].to_numpy()\n",
+    "x_train_20, x_test_20, y_train_20, y_test_20 = train_test_split(x_20, y_20, test_size=0.15, shuffle=True)\n",
     "\n",
-    "data_25 = train_encoded_1.sample(frac=0.10)\n",
-    "x_25, y_25 = data_25.iloc[:,:-1].to_numpy(), data_25['over-50K'].to_numpy()\n",
-    "x_train_25, x_test_25, y_train_25, y_test_25 = train_test_split(x_25, y_25, test_size=0.15, shuffle=True)\n",
+    "data_10 = train_encoded_1.sample(frac=0.10)\n",
+    "x_10, y_10 = data_10.iloc[:,:-1].to_numpy(), data_10['over-50K'].to_numpy()\n",
+    "x_train_10, x_test_10, y_train_10, y_test_10 = train_test_split(x_10, y_10, test_size=0.15, shuffle=True)\n",
     "\n",
     "\n",
     "print(x_train.shape, x_test.shape)\n",
@@ -324,19 +324,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "source": [
+    "loss = lambda y, yh: np.mean((y-yh)**2)\n",
+    "\n",
+    "(nb_instances, nb_features) = x_train_10.shape\n",
+    "n_test, n_valid = nb_instances // 5, nb_instances // 5\n",
+    "\n",
+    "inds = np.random.permutation(nb_instances)\n",
+    "x_test, y_test = x[inds[:n_test]], y[inds[:n_test]]\n",
+    "x_rest, y_rest = x[inds[n_test:]], y[inds[n_test:]]\n",
+    "n_rest = nb_instances - n_test # Store number of remaining data for train and valid\n",
+    "\n",
     "# For each K, test each split\n",
     "K_list = range(1,5)\n",
+    "acc_list = [],\n",
     "for i, K in enumerate(K_list):\n",
-    "  # splits\n",
-    "    model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
-    "    model = model.fit(x_train_25, y_train_25)\n",
+    "    #Find the validation errors for num_folds splits for a given K\n",
+    "    for f, (tr, val) in enumerate(cross_validate(n_rest, 5)):\n",
+    "        model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
+    "        model = model.fit(x_rest[tr], y_rest[tr])\n",
     "\n",
+    "        # Predict  \n",
+    "        y_pred = model.predict(x_rest)\n",
+    "        acc = np.mean(y_pred == y_rest)\n",
+    "        acc_list[0].append(acc)\n",
     "\n",
+    "print(acc_list[0])\n",
     "    "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.9590443686006825, 0.9536811311555339, 0.9551438322769381, 0.9561189663578742, 0.9551438322769381, 0.7640175524134568, 0.7596294490492442, 0.7625548512920527, 0.7620672842515845, 0.7625548512920527, 0.6504144319843979, 0.6494392979034618, 0.6455387615797172, 0.6543149683081424, 0.6411506582155047, 0.5821550463188688, 0.5841053144807411, 0.5694783032666991, 0.5699658703071673, 0.575816674792784]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
