added criteria list for decision tree

--- a/dataset-2.ipynb
+++ b/dataset-2.ipynb
@@ -241,7 +241,7 @@
     "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
     "        err_valid[i, f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
     "   \n",
-    "plt.plot(K_list, err_train,  label='test')\n",
+    "plt.plot(K_list, err_train,  label='train')\n",
     "plt.errorbar(K_list, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='validation')\n",
     "plt.legend()\n",
     "plt.xlabel('K (number of neighbours)')\n",
@@ -261,6 +261,13 @@
       "needs_background": "light"
      }
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Evaluating neighbor weights"
    ],
    "metadata": {}
   },
@@ -311,12 +318,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
+    "criteria_list=[\"gini\", \"entropy\"]\n",
     "## TO BE CHANGED FOR DECISION TREE\n",
-    "for i, K in enumerate(K_list):\n",
+    "for i, crt in enumerate(criteria_list):\n",
     "    #Find the validation errors for num_folds splits for a given K\n",
     "    model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
     "    model = model.fit(x_train2, y_train2)\n",
@@ -333,7 +341,16 @@
     "plt.ylabel('mean squared error')\n",
     "plt.show()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (1338547296.py, line 5)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/t8/_kxxkxnd5lqg2bn_xf69flb40000gn/T/ipykernel_23069/1338547296.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    for i, crt in enumerate(criteri)):\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
