added ilyes' neighbor weights

--- a/dataset-2.ipynb
+++ b/dataset-2.ipynb
@@ -372,7 +372,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "'''from sklearn import neighbors\n",
+    "\n",
+    "K_list=range(1,100)\n",
+    "\n",
+    "err_train,err_valid = np.zeros(len(K_list)), np.zeros((len(K_list), num_folds))\n",
+    "\n",
+    "#Evaluating best number of K neighbors\n",
+    "for i, K in enumerate(K_list):\n",
+    "    #Find the validation errors for num_folds splits for a given K\n",
+    "    model = neighbors.KNeighborsRegressor(n_neighbors=K, weights='distance')\n",
+    "    model = model.fit(x_train2, y_train2)\n",
+    "    err_train[i]= loss(y_train2, model.predict(x_train2))\n",
+    "    for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
+    "        model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
+    "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
+    "        err_valid[i, f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
+    "   \n",
+    "plt.plot(K_list, err_train,  label='train')\n",
+    "plt.errorbar(K_list, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='validation')\n",
+    "plt.legend()\n",
+    "plt.xlabel('K (number of neighbours)')\n",
+    "plt.ylabel('mean squared error')\n",
+    "plt.show()'''"
+   ],
    "outputs": [],
    "metadata": {}
   },
