changed MSE to accuracy

--- a/dataset-2.ipynb
+++ b/dataset-2.ipynb
@@ -279,8 +279,8 @@
     "print(x_train2)\n",
     "y_train2=y_train2.to_numpy()\n",
     "\n",
-    "#define a function for the MSE losss\n",
-    "loss = lambda y, yh: np.mean((y-yh)**2)"
+    "#define a function for the accuracy\n",
+    "accuracy= lambda y, yh: np.mean(y==yh)"
    ],
    "outputs": [
     {
@@ -323,30 +323,29 @@
    "cell_type": "code",
    "execution_count": 68,
    "source": [
-    "'''from sklearn import neighbors\n",
+    "from sklearn import neighbors\n",
     "\n",
     "K_list=range(1,100)\n",
     "\n",
-    "err_train,err_valid = np.zeros(len(K_list)), np.zeros((len(K_list), num_folds))\n",
+    "acc_train,acc_valid = np.zeros(len(K_list)), np.zeros((len(K_list), num_folds))\n",
     "\n",
     "#Evaluating best number of K neighbors\n",
     "for i, K in enumerate(K_list):\n",
     "    #Find the validation errors for num_folds splits for a given K\n",
     "    model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
     "    model = model.fit(x_train2, y_train2)\n",
-    "    err_train[i]= loss(y_train2, model.predict(x_train2))\n",
+    "    acc_train[i]= accuracy(y_train2, model.predict(x_train2))\n",
     "    for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
     "        model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
     "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
-    "        err_valid[i, f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
+    "        acc_valid[i, f] = accuracy(y_val2[val], model.predict(x_val2[val])) \n",
     "   \n",
-    "plt.plot(K_list, err_train,  label='train')\n",
-    "plt.errorbar(K_list, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='validation')\n",
+    "plt.plot(K_list, acc_train,  label='train')\n",
+    "plt.errorbar(K_list, np.mean(acc_valid, axis=1), np.std(acc_valid, axis=1), label='validation')\n",
     "plt.legend()\n",
     "plt.xlabel('K (number of neighbours)')\n",
     "plt.ylabel('mean squared error')\n",
-    "plt.show()\n",
-    "'''"
+    "plt.show()\n"
    ],
    "outputs": [
     {
@@ -373,28 +372,28 @@
    "cell_type": "code",
    "execution_count": 69,
    "source": [
-    "'''from sklearn import neighbors\n",
+    "from sklearn import neighbors\n",
     "\n",
     "K_list=range(1,100)\n",
     "\n",
-    "err_train,err_valid = np.zeros(len(K_list)), np.zeros((len(K_list), num_folds))\n",
+    "acc_train,acc_valid = np.zeros(len(K_list)), np.zeros((len(K_list), num_folds))\n",
     "\n",
     "#Evaluating best number of K neighbors\n",
     "for i, K in enumerate(K_list):\n",
     "    #Find the validation errors for num_folds splits for a given K\n",
     "    model = neighbors.KNeighborsRegressor(n_neighbors=K, weights='distance')\n",
     "    model = model.fit(x_train2, y_train2)\n",
-    "    err_train[i]= loss(y_train2, model.predict(x_train2))\n",
+    "    acc_train[i]= accuracy(y_train2, model.predict(x_train2))\n",
     "    for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
     "        model = neighbors.KNeighborsRegressor(n_neighbors=K)\n",
     "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
-    "        err_valid[i, f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
+    "        acc_valid[i, f] = accuracy(y_val2[val], model.predict(x_val2[val])) \n",
     "   \n",
-    "plt.plot(K_list, err_train,  label='train')\n",
-    "plt.errorbar(K_list, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='validation')\n",
+    "plt.plot(K_list, acc_train,  label='train')\n",
+    "plt.errorbar(K_list, np.mean(acc_valid, axis=1), np.std(acc_valid, axis=1), label='validation')\n",
     "plt.legend()\n",
     "plt.xlabel('K (number of neighbours)')\n",
-    "plt.ylabel('mean squared error')'''\n"
+    "plt.ylabel('mean squared error')\n"
    ],
    "outputs": [
     {
@@ -462,40 +461,40 @@
     "from sklearn import tree\n",
     "\n",
     "criteria_list=[\"gini\", \"entropy\"] \n",
-    "err_train,err_valid = np.zeros(len(criteria_list)), np.zeros((len(criteria_list), num_folds))\n",
+    "acc_train,acc_valid = np.zeros(len(criteria_list)), np.zeros((len(criteria_list), num_folds))\n",
     "\n",
     "model = tree.DecisionTreeClassifier()\n",
     "model = model.fit(x_train2, y_train2)\n",
-    "err_train[0]= loss(y_train2, model.predict(x_train2))\n",
+    "acc_train[0]= accuracy(y_train2, model.predict(x_train2))\n",
     "\n",
     "for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
     "        model = tree.DecisionTreeClassifier()\n",
     "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
-    "        err_valid[0,f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
+    "        acc_valid[0,f] = accuracy(y_val2[val], model.predict(x_val2[val])) \n",
     "\n",
     "\n",
     "model = tree.DecisionTreeClassifier(criterion=\"entropy\")\n",
     "model = model.fit(x_train2, y_train2)\n",
-    "err_train[1]= loss(y_train2, model.predict(x_train2))\n",
+    "acc_train[1]= accuracy(y_train2, model.predict(x_train2))\n",
     "\n",
     "for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
     "        model = tree.DecisionTreeClassifier(criterion=\"entropy\")\n",
     "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
-    "        err_valid[1,f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
+    "        acc_valid[1,f] = accuracy(y_val2[val], model.predict(x_val2[val])) \n",
     "\n",
     "\n",
-    "print(err_valid)\n",
-    "print(err_train)\n",
+    "print(acc_valid)\n",
+    "print(acc_train)\n",
     "x=[1,2]\n",
     "\n",
     "plt.subplot(1,2,1)\n",
-    "plt.scatter(x,err_train, label='training')\n",
+    "plt.scatter(x,acc_train, label='training')\n",
     "plt.xlabel('Gini Index=1                Entropy=2')\n",
     "plt.ylabel('Mean squared error')\n",
     "plt.title('Training')\n",
     "\n",
     "plt.subplot(1,2,2)\n",
-    "plt.scatter(x,np.mean(err_valid, axis=1),label='validation')\n",
+    "plt.scatter(x,np.mean(acc_valid, axis=1),label='validation')\n",
     "#plt.errorbar(criteria_list, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='Validation')\n",
     "plt.title('Validation')\n",
     "plt.xlabel('Gini Index=1                Entropy=2')\n",
@@ -544,21 +543,21 @@
     "\n",
     "max_depth=range(4,8)\n",
     "\n",
-    "err_train,err_valid = np.zeros(len(max_depth)), np.zeros((len(max_depth), num_folds))\n",
+    "acc_train,acc_valid = np.zeros(len(max_depth)), np.zeros((len(max_depth), num_folds))\n",
     "\n",
     "#Evaluating value for max depth\n",
     "for i, d in enumerate(max_depth):\n",
     "    #Find the validation errors for num_folds splits for a given max_depth\n",
     "    model = tree.DecisionTreeClassifier(criterion='gini',max_depth=d)\n",
     "    model = model.fit(x_train2, y_train2)\n",
-    "    err_train[i]= loss(y_train2, model.predict(x_train2))\n",
+    "    acc_train[i]= accuracy(y_train2, model.predict(x_train2))\n",
     "    for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
     "        model = tree.DecisionTreeClassifier(criterion='gini',max_depth=d)\n",
     "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
-    "        err_valid[i, f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
+    "        acc_valid[i, f] = accuracy(y_val2[val], model.predict(x_val2[val])) \n",
     "   \n",
-    "plt.plot(max_depth, err_train,  label='Train')\n",
-    "plt.errorbar(max_depth, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='Validation')\n",
+    "plt.plot(max_depth, acc_train,  label='Train')\n",
+    "plt.errorbar(max_depth, np.mean(acc_valid, axis=1), np.std(acc_valid, axis=1), label='Validation')\n",
     "plt.legend()\n",
     "plt.xlabel('Max depth')\n",
     "plt.ylabel('Mean squared error')\n",
@@ -595,21 +594,21 @@
     "\n",
     "max_depth=range(3,8)\n",
     "\n",
-    "err_train,err_valid = np.zeros(len(max_depth)), np.zeros((len(max_depth), num_folds))\n",
+    "acc_train,acc_valid = np.zeros(len(max_depth)), np.zeros((len(max_depth), num_folds))\n",
     "\n",
     "#Evaluating value for max depth\n",
     "for i, d in enumerate(max_depth):\n",
     "    #Find the validation errors for num_folds splits for a max_depth\n",
     "    model = tree.DecisionTreeClassifier(criterion='entropy',max_depth=d)\n",
     "    model = model.fit(x_train2, y_train2)\n",
-    "    err_train[i]= loss(y_train2, model.predict(x_train2))\n",
+    "    acc_train[i]= accuracy(y_train2, model.predict(x_train2))\n",
     "    for f, (tr, val) in enumerate(cross_validate(n_val, num_folds)):\n",
     "        model = tree.DecisionTreeClassifier(criterion='entropy',max_depth=d)\n",
     "        model = model.fit(x_val2[tr,:], y_val2[tr])\n",
-    "        err_valid[i, f] = loss(y_val2[val], model.predict(x_val2[val])) \n",
+    "        acc_valid[i, f] = accuracy(y_val2[val], model.predict(x_val2[val])) \n",
     "   \n",
-    "plt.plot(max_depth, err_train,  label='Train')\n",
-    "plt.errorbar(max_depth, np.mean(err_valid, axis=1), np.std(err_valid, axis=1), label='Validation')\n",
+    "plt.plot(max_depth, acc_train,  label='Train')\n",
+    "plt.errorbar(max_depth, np.mean(acc_valid, axis=1), np.std(acc_valid, axis=1), label='Validation')\n",
     "plt.legend()\n",
     "plt.xlabel('Max depth')\n",
     "plt.ylabel('Mean squared error')\n",
